# mini-swe-agent-opencode-auth

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
minisweagent_opencode_auth/: __init__.py  cli.py  model.py
tests/: test_cli.py
